--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.5",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@vercel/analytics": "^1.4.1",
     "better-sqlite3": "^11.7.2",
     "lucia": "^3.2.2",
     "lucia-auth": "^1.8.0",
