--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@lucia-auth/adapter-sqlite": "^3.0.2",
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
+    "@neondatabase/serverless": "^0.9.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.4.1",
-    "better-sqlite3": "^11.7.2",
     "lucia": "^3.2.2",
     "lucia-auth": "^1.8.0",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.7.0",
     "next": "^14.2.15",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.5"
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
 }
