--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@neondatabase/serverless": "^0.9.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/analytics": "^1.4.1",
+    "daisyui": "^4.12.23",
     "lucia": "^3.2.2",
     "lucia-auth": "^1.8.0",
     "mongodb": "^6.12.0",
@@ -29,6 +30,6 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
